# chip-8-interpreter

./: CMakeLists.txt  main.cpp
src/: Chip8.cpp  Chip8.h  Renderer.cpp  Renderer.h
